# cect

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Notes.md  README.md  Senior QA Test Exercise.docx  cect.yml  docker-compose.yml  pytest_config.yml
src/: config.rs  main.rs  message.rs  monitor.rs  producer.rs  sender.rs
test/: README.md  blah.txt  pytest.ini  pytest_config.yml  requirements.txt
test/Bug Reports/: 1_mean_time_set_to_0  2_failure_rate_abnormally_high  3_num_messages_limit_not_being_used_by_producer  4_negative_numbers_crashes_the_simulation  5_expected_rate_does_not_match_actual_rate
test/Monitor/: test_monitor.py
test/Util/: yaml_creator.py
