[package]
name = "cect"
version = "0.1.0"
authors = ["jking"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.9.0", features = [ "attributes" ] }
dotenv = "0.15.0"
env_logger = "0.7.1"
futures-util = "0.3.12"
log = "0.4"
rand = "0.8.3"
rand_distr = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.8"
structopt = "0.3"
